--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /*-----------Google Fonts-----------*/
 
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@500;600&family=Roboto:wght@400;500&display=swap');
 
 /*-----------Google Fonts Ends-------------*
 
@@ -56,15 +56,11 @@
     margin-right: 20px;
 }
 
-.menu a {
-    color: #B09E80;
+.navbar-dark .navbar-nav .nav-link {
+    color: #b09e80;
 }
 
 .menu a:hover {
-    border-bottom: 1px solid #B09E80;
-}
-
-.active {
     border-bottom: 1px solid #B09E80;
 }
 
@@ -72,6 +68,40 @@
     background-color: #192537;
 }
 
+.navbar .navbar-toggler {
+    border:0;
+}
+
+/*--------Footer--------*/
+
+.headings {
+    font-family: "Cormorant SC", sans-serif;
+    margin:0;
+    color: #B09E80;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.information {
+    font-family: "Roboto", sans-serif;
+    color: #B09E80
+}
+
+.footer-menu {
+    text-align: center;
+}
+
+.social-links li a i {
+    font-size: 15px;
+    text-align: center;
+    color: #B09E80;
+    
+}
+
+footer {
+    background-color: #192537;
+    min-height: 100px
+}
 
 
 
