--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,9 +199,21 @@
     color: #192537;
     font-family: "Roboto", sans-serif;
 }
+.add-info {
+    margin-top: 10px;
+}
 
+.form-control {
+    background-color:#dcd4c5;
+}
 
-
+.delivery-button {
+    background-color: #192537;
+    color: #B09E80;
+    font-family: "Cormorant SC", sans-serif;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
 
 
 
@@ -266,6 +278,10 @@ footer {
 
 .form-group input {
     font-family: "Roboto", sans-serif;
+}
+
+.checked {
+    list-style: none;
 }
 
 
