--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,6 +186,37 @@
 
 /*----------home-page-cards-ends----------*/
 
+/*----------breweries----------*/
+
+.brewery-hero-image {
+    height:50vh;
+    background: url('../images/brewery-hero-image.jpg') no-repeat center center; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    position:relative;
+}
+
+.card-img-top {
+    height: 200px;
+    width:100%;
+    object-fit:cover;
+}
+
+.brew-card-body {
+    height: 350px;
+}
+
+
+
+/*----------breweries ends----------*/
+
 /*----------Customize Your Crate-----------*/
 
 .headings {
