--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@
     background-color: #B09E80;
 }
 
+.content-background-light {
+    background-color: #dcd4c5;
+}
+
 /*-----------Logo-----------*/
 
 .logo-abb {
@@ -211,6 +215,11 @@
 
 .brew-card-body {
     height: 350px;
+}
+
+.block-divider {
+    border-top: 5px solid #192537;
+    width: 50px;
 }
 
 
