--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,6 +190,45 @@
 
 /*----------home-page-cards-ends----------*/
 
+/*----------beers---------*/
+
+.beer-image-container {
+    height: 300px;
+    max-width:250px;
+    position: relative;
+    margin: 20px;
+    
+}
+
+.beer-image {
+    width: 100%;
+    height: 300px;
+    object-fit:cover;
+    padding: 8px;
+    background-image: url(https://cdn.shopify.com/s/files/1/1728/1943/products/l18911_1024x1024.jpg?v=1504652933);
+    
+}
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  background: rgb(0, 0, 0);
+  background: rgba(27,37,55, 0.8); /* Black see-through */
+  color: #f1f1f1;
+  width: 100%;
+  transition: .5s ease;
+  opacity:0;
+  color: white;
+  padding: 20px;
+  text-align: center;
+}
+
+.beer-image-container:hover .overlay {
+  opacity: 1;
+}
+
+/*----------beers---------*/
+
 /*----------breweries----------*/
 
 .brewery-hero-image {
