--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,6 +142,11 @@
     background-color: rgba(0,0,0,0.7);
 }
 
+.block-divider-light {
+    border-top: 5px solid #B09E80;
+    width: 50px;
+}
+
 
 
 
