big fixed with logo and nav links underlined on all html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,10 @@
     border:0;
 }
 
+.active {
+    border-bottom: 1px solid #B09E80;
+}
+
 /*----------Navbar Ends------------*/
 
 /*----------Home Jumbotron----------*/
@@ -162,7 +166,7 @@
 /*----------Customer Reviews-----------*/
 
 .customer-image-container {
-    max-width: 550px;
+    max-width: 450px;
     margin: 30px;
 }
 
@@ -173,6 +177,10 @@
     padding: 8px;
     background-image: url(https://cdn.shopify.com/s/files/1/1728/1943/products/l18911_1024x1024.jpg?v=1504652933);
     border-radius: 50%;
+}
+
+.fa-star {
+    color: #192537;
 }
 
 /*----------Cutomer Reviews End-----------*/
