lighthouse images added for README.md

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -485,4 +485,18 @@ footer {
 
 /*--------Modal Ends---------*/
 
+/*--------Media Queries---------*/
 
+@media screen and (max-height: 320px) {
+.hero-image {
+    height: 130vh;
+}
+}
+
+@media screen and (max-height: 280px) {
+.hero-image {
+    height: 140vh;
+}
+}
+
+/*--------Media Queries Ends---------*/
