--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 /*-----------Google Fonts-----------*/
 
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@500;600&family=Roboto:wght@400;500&display=swap');
@@ -15,6 +22,8 @@
 }
 
 .content-background-gradient { /*-- Thanks to https://www.w3schools.com/css/css3_gradients.asp for this code --*/
+    background-image: -webkit-gradient(linear, left top, right bottom, from(#fff), to(#B09E80));
+    background-image: -o-linear-gradient(top left, #fff, #B09E80);
     background-image: linear-gradient(to bottom right, #fff, #B09E80);
 }
 
@@ -157,15 +166,20 @@
 
 .hero-image { /*-- Thanks to Matt Rudge at Code Institue for this code --*/
     height:100vh;
-    background: url('../images/beer-tap-background.jpg') no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    background: url('../images/beer-tap-background.jpg') no-repeat center center fixed;
     background-size: cover;
 
+    display: -webkit-box;
+
+    display: -ms-flexbox;
+
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 
     position:relative;
 }
@@ -200,7 +214,8 @@
 .customer-image {
     width: 150px;
     height: 150px;
-    object-fit:cover;
+    -o-object-fit:cover;
+       object-fit:cover;
     padding: 0.5rem;
     background: url(https://cdn.shopify.com/s/files/1/1728/1943/products/l18911_1024x1024.jpg?v=1504652933) no-repeat center center;
     border-radius: 50%;
@@ -222,7 +237,8 @@
 .how-it-works-image {
     width: 250px;
     height: 250px;
-    object-fit:cover;
+    -o-object-fit:cover;
+       object-fit:cover;
     padding: 0.5rem;
     background: url(https://cdn.shopify.com/s/files/1/1728/1943/products/l18911_1024x1024.jpg?v=1504652933) no-repeat center center;
     border-radius: 50%;
@@ -241,7 +257,8 @@
 .card {
     padding: 0.5rem;
     background: url(https://cdn.shopify.com/s/files/1/1728/1943/products/l18911_1024x1024.jpg?v=1504652933) no-repeat center center;
-    box-shadow: 10px 10px 5px #75664e;
+    -webkit-box-shadow: 10px 10px 5px #75664e;
+            box-shadow: 10px 10px 5px #75664e;
 }
 
 
@@ -275,10 +292,12 @@
 .beer-image { /*-- Thanks to https://www.w3schools.com/howto/howto_css_image_overlay_title.asp for this code --*/
     width: 100%;
     height: 350px;
-    object-fit:cover;
+    -o-object-fit:cover;
+       object-fit:cover;
     padding: 0.5rem;
     background: url(https://cdn.shopify.com/s/files/1/1728/1943/products/l18911_1024x1024.jpg?v=1504652933) no-repeat bottom center;
-    box-shadow: 10px 10px 5px #75664e;
+    -webkit-box-shadow: 10px 10px 5px #75664e;
+            box-shadow: 10px 10px 5px #75664e;
 }
 
 .overlay { /*-- Thanks to https://www.w3schools.com/howto/howto_css_image_overlay_title.asp for this code --*/
@@ -288,6 +307,8 @@
   background: rgba(27,37,55, 0.9);
   color: #f1f1f1;
   width: 100%;
+  -webkit-transition: .5s ease;
+  -o-transition: .5s ease;
   transition: .5s ease;
   opacity:0;
   color: white;
@@ -303,20 +324,26 @@
 .beer-image-logo {
     width: 2rem;
     height: 2rem;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
 }
 
 .beers-hero-image { /*-- Thanks to https://css-tricks.com/perfect-full-page-background-image/ for this code --*/
     height:50vh;
-    background: url('../images/beer-hero-image.jpg') no-repeat center center; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    background: url('../images/beer-hero-image.jpg') no-repeat center center;
     background-size: cover;
 
+    display: -webkit-box;
+
+    display: -ms-flexbox;
+
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 
     position:relative;
 }
@@ -327,15 +354,20 @@
 
 .brewery-hero-image { /*-- Thanks to https://css-tricks.com/perfect-full-page-background-image/ for this code --*/
     height:50vh;
-    background: url('../images/brewery-hero-image.jpg') no-repeat center center; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    background: url('../images/brewery-hero-image.jpg') no-repeat center center;
     background-size: cover;
 
+    display: -webkit-box;
+
+    display: -ms-flexbox;
+
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 
     position:relative;
 }
@@ -343,7 +375,8 @@
 .card-img-top {
     height: 200px;
     width:100%;
-    object-fit:cover;
+    -o-object-fit:cover;
+       object-fit:cover;
 }
 
 .brew-card-body {
@@ -380,15 +413,20 @@
 
 .contact-hero-image { /*-- Thanks to https://css-tricks.com/perfect-full-page-background-image/ for this code --*/
     height:50vh;
-    background: url('../images/contact-hero-image.jpg') no-repeat center bottom; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    background: url('../images/contact-hero-image.jpg') no-repeat center bottom;
     background-size: cover;
 
+    display: -webkit-box;
+
+    display: -ms-flexbox;
+
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 
     position:relative;
 }
