--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,7 +168,7 @@
     height:100vh;
     background: url('../images/beer-tap-background.jpg') no-repeat center center;
     background-size: cover;
-    background-attachment: scroll;
+    background-attachment: scroll; /*-- Thanks to https://stackoverflow.com/questions/19795830/background-image-not-scaling-properly-on-ios this code --*/
 
     display: -webkit-box;
 
